--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/NMZ8Mt6?hideBoleto=true" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/C70537096A" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">¡QUIERES ACCEDER!</span>
                 <span class="span-btn2">(atención: plazas limitadas)</span>
               </a>
